# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
sequencer-app/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
sequencer-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
sequencer-app/src/: app.py  audioengine.py  clock.py  config.py  index.py  sequencer.py
sequencer-app/src/projects/: .gitignore  default.seqjson  empty.seqjson  testi.seqjson
sequencer-app/src/services/: audioengine.py  files.py  sequencer.py
sequencer-app/src/tests/: app_test.py  audioengine_test.py  files_test.py  sequencer_test.py
sequencer-app/src/ui/: ui.py
