[project]
name = "sequencer-app"
version = "0.1.0"
description = ""
authors = [
    {name = "ttanninen"}
]
requires-python = "^3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
